[package]
name = "freeze"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = "0.17.9"
libc = "0.2.169"
nix = "0.29.0"
rand = "0.8.5"
reqwest = "0.12.9"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }


[[bin]]
name = "freeze"
path = "src/freeze.rs"
